Fix for blurry logos

--- a/css/original.css
+++ b/css/original.css
@@ -30,6 +30,12 @@ section {
     overflow-x:hidden;
 }
 
+img{
+  image-rendering: -moz-crisp-edges;         /* Firefox */
+  image-rendering:   -o-crisp-edges;         /* Opera */
+  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+}
 
 /*
 * Trust Badge
